finalizando aula flex box

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="barra-red">
 
         </div>
-        <img class="logo" src="./imagem/NFL-Logo 1.png">
+        <img class="logo" src="./imagem/NFL-Logo 1.png" alt="NFL">
         <div id="barra-black">
 
         </div>
@@ -32,7 +32,7 @@
     </div>
     <div id="image">
 
-        <img height="90%" src="./imagem/Rectangle 1.png" width="75%">
+        <img class="draft" src="./imagem/Rectangle 1.png" alt="road the draft">
     </div>
     <div id="container">
 
@@ -40,10 +40,21 @@
 
 
     </div>
+
+    <hr class="linha-pequena">
     </div>
+
+    <div class="moldura-1">
+
+    </div>
+
     <div id="image">
 
-        <img height="30%" src="./imagem/Frame 1.png" width="70%">
+        <img class="central-draft" src="./imagem/Frame 1.png" alt="central draft">
+    </div>
+
+    <div class="moldura-2">
+
     </div>
     <div id="container">
 
@@ -62,7 +73,7 @@
     <div id="image">
 
 
-        <img height="90%" src="./imagem/Captura de tela 2024-03-22 205925 1.png" width="75%">
+        <img class="fields" src="./imagem/Captura de tela 2024-03-22 205925 1.png">
     </div>
 
 </body>
